@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020130826"
-#define public MagickPackageReleaseDate "snapshot-20130826"
+#define public MagickPackageVersionAddendum ".020130904"
+#define public MagickPackageReleaseDate "snapshot-20130904"
